# autoplot

./: .eslintrc.cjs  .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  SECURITY.md  index.html  package-lock.json  package.json  playwright.config.ts  prettier.config.cjs  vite.config.ts
.github/workflows/: ci.yml  docs.yml
app-design/: README.md
app-design/project/: Design System.html  agents.jsx  app.css  app.jsx  autoplot.html  chart.jsx  chrome.jsx  data.js  panel.jsx
docs/: GLOSSARY.md  INDEX.md  p5-smoke.md  p7-smoke.md  requirement.md
docs/adr/: 0001-market-data-provider-frozen.md  0002-timeframe-set-locked.md  0003-claude-profile-isolation.md  0004-design-binding-prototype.md  0005-append-only-migrations.md  0006-terminal-pty-mode.md  0007-app-mcp-bridge.md  0008-equities-provider.md  0009-dynamic-symbol-catalog.md  0010-portfolio-holdings-model.md  0011-activity-bar-drawer-dock.md  0012-overlay-layering-and-legibility.md  0013-pinescript-indicator-overlay-recipe.md  0014-overlay-recipe-recompute-model.md  README.md
docs/audit/: PFIX-style-audit.md
docs/plan/: HAND-OFF.md  P0-foundation.md  P1-core-charting.md  P2-floating-ui.md  P3-asset-panel.md  P4-crypto-data.md  P5-claude-cli.md  P6-research-agent.md  P7-strategy-agent.md  P8-polish.md  P9-release.md  README.md
docs/qa/: windows-verification.md
docs/reference/: credential-storage.md  tauri-ipc.md
docs/schemas/: dataset.schema.json  strategy.schema.json
scripts/: build-sidecar.mjs  capture-renderers.mjs  capture-visual-diff-p1-full.mjs  capture-visual-diff-p5.mjs  capture-visual-diff-p6.mjs  capture-visual-diff-p7.mjs  gen-tauri-ipc-doc.mjs  generate-icons.mjs
src/: App.test.tsx  App.tsx  AppShell.test.tsx  AppShell.tsx  main.tsx  test-setup.ts
src-tauri/: CLAUDE.md  Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 0001_init.sql  0002_marks.sql  0003_watchlist.sql  0004_bars.sql  0006_trends.sql  0007_ai_sessions.sql  0008_datasets.sql  0009_strategies.sql  0010_ai_workspace_tables.sql  0011_marks_add_provider.sql  0012_trends_add_provider.sql  0013_symbols_fts.sql  0014_bars_v2.sql  0015_watchlist_v2.sql  0016_marks_add_quote.sql  0017_trends_add_quote.sql  0018_portfolio.sql  0019_research_overlays.sql  0020_ai_sessions_title.sql
src-tauri/resources/profile-assets/commands/: README.md  explain.md  research.md  save-current.md  strategy.md
src-tauri/resources/profile-assets/skills/autoplot-onboarding/: SKILL.md
src-tauri/resources/profile-assets/skills/pinescript-to-indicator/: SKILL.md
src-tauri/sidecars/autoplot-mcp/: Cargo.toml  README.md
src-tauri/sidecars/autoplot-mcp/src/: bridge.rs  main.rs  server.rs  tools.rs
src-tauri/sidecars/autoplot-mcp/tests/: integration.rs
src-tauri/src/: ai_workspace.rs  db.rs  ipc_bridge.rs  lib.rs  main.rs  profile.rs
src-tauri/src/commands/: credentials.rs  db.rs  market.rs  mcp.rs  mod.rs  settings_hooks.rs  skills.rs  symbols.rs  terminal.rs
src-tauri/src/providers/: alpaca.rs  binance.rs  catalog.rs  coinbase.rs  kraken.rs  mod.rs  rate_limit.rs
src-tauri/tests/: ipc_bridge.rs
src-tauri/tests/fixtures/: alpaca_bars_aapl_1h.json  alpaca_catalog.json  binance_catalog.json  binance_klines_btcusdt_1h.json  coinbase_candles_btc_usd_1h.json  coinbase_catalog.json  kraken_catalog.json  kraken_ohlc_xbtusd_60.json
src/__doctests__/: claude-md.test.ts
src/ai/: CLAUDE.md  bridgeRoundtrip.ts  cliPaths.ts  devEventFixtures.test.ts  devEventFixtures.ts  pineIndicator.test.ts  researchOverlay.e2e.test.ts  schemas.test.ts  schemas.ts  (+3 more)
(+222 files in other folders)
